# alfred

./: .coverage  .gitignore  404.html  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml  voyager-alfred-canary-v040-2026-05-24.md
.claude/: trinity.json
.review-packs/: FXA-2230-review-pack.md  FXA-2294-review-pack-r2.md  FXA-2294-review-pack.md  FXA-2295-review-pack.md  FXA-2296-review-pack.md  FXA-2297-review-pack.md  FXA-2298-review-pack.md  FXA-2299-review-pack.md  FXA-2300-review-pack.md  FXA-2301-review-pack.md  FXA-2302-review-pack.md  FXA-2303-code-review-pack.md  FXA-2303-glm-code-review-prompt.md  FXA-2303-prp-review-pack-r2.md  FXA-2303-prp-review-pack.md
COR-0000-REF-Document-Index/: index.html
COR-0001-REF-Glossary/: index.html
COR-0002-REF-Document-Format-Contract/: index.html
COR-1000-SOP-Create-SOP/: index.html
COR-1001-SOP-Create-Document/: index.html
COR-1002-SOP-Read-Document/: index.html
COR-1004-SOP-Create-Routing-Document/: index.html
COR-1100-SOP-Create-Decision-Record/: index.html
COR-1101-SOP-Submit-Change-Request/: index.html
COR-1102-SOP-Create-Proposal/: index.html
COR-1103-SOP-Workflow-Routing/: index.html
COR-1104-SOP-CHG-Sizing-Decision-Tree/: index.html
COR-1200-SOP-Session-Retrospective/: index.html
COR-1201-SOP-Discussion-Tracking/: index.html
COR-1202-SOP-Compose-Session-Plan/: index.html
COR-1203-SOP-Pre-Task-Alignment/: index.html
COR-1204-REF-CTX-Format/: index.html
COR-1205-REF-Agent-Activity-Log-Format/: index.html
COR-1206-SOP-Emit-Agent-Activity/: index.html
COR-1207-SOP-Zoom-Out/: index.html
COR-1208-SOP-Session-Startup-Sanity-Check/: index.html
COR-1300-SOP-Update-Document/: index.html
COR-1301-SOP-Deprecate-Document/: index.html
COR-1302-SOP-Maintain-Document-Index/: index.html
COR-1400-SOP-Atomic-SOP-Principle/: index.html
COR-1401-SOP-Documentation-Language-Policy/: index.html
COR-1402-SOP-Declare-Active-Process/: index.html
COR-1403-SOP-Interactive-Question-Principle/: index.html
COR-1404-SOP-Interactive-Question-Claude-Code/: index.html
COR-1405-SOP-Interactive-Question-GitHub-Copilot/: index.html
COR-1500-SOP-TDD-Development-Workflow/: index.html
COR-1501-SOP-Create-GitHub-Issue/: index.html
COR-1502-SOP-Git-Branch-Naming/: index.html
COR-1503-SOP-Diagnose-Feedback-Loop/: index.html
COR-1504-REF-Diagnose-Phase-Gates/: index.html
COR-1505-SOP-Branch-and-Identity-Hygiene/: index.html
(+489 files in other folders)
