[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fx-alfred"
version = "1.1.0"
description = "Alfred — Agent Runbook: workflow routing, SOP checklists, and document management for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["click>=8.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff>=0.15", "pyright"]
evolve = ["pytest>=9.0", "pytest-json-report", "pytest-cov"]

[project.scripts]
af = "fx_alfred.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/fx_alfred"]
artifacts = ["src/fx_alfred/rules/*.md", "src/fx_alfred/templates/*.md", "src/fx_alfred/CHANGELOG.md"]

[tool.hatch.build.targets.sdist]
artifacts = ["src/fx_alfred/rules/*.md", "src/fx_alfred/templates/*.md", "src/fx_alfred/CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
