[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fx-alfred"
version = "1.13.0"
description = "Alfred — Agent Runbook: workflow routing, SOP checklists, and document management for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["click>=8.0", "pyyaml>=6.0", "wcwidth>=0.2.13"]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-cov", "ruff>=0.15", "pyright", "mkdocs-material"]
evolve = ["pytest>=9.0", "pytest-json-report", "pytest-cov"]

[project.scripts]
af = "fx_alfred.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/fx_alfred"]
artifacts = ["src/fx_alfred/rules/*.md", "src/fx_alfred/templates/*.md", "src/fx_alfred/CHANGELOG.md"]

[tool.hatch.build.targets.sdist]
artifacts = ["src/fx_alfred/rules/*.md", "src/fx_alfred/templates/*.md", "src/fx_alfred/CHANGELOG.md"]

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
testpaths = ["tests"]
markers = [
    "unit: pure function or narrow module tests without project-level integration setup",
    "cli: tests that exercise the af command surface or Click command wiring",
    "integration: tests that exercise filesystem, packaging, subprocess, or cross-module behavior",
    "docs: tests that validate document, rule, template, or documentation behavior",
    "slow: intentionally slower tests that may be excluded from tight local loops",
]

[tool.ruff]
target-version = "py310"
